# pptx-handler

./: AUTHORS.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  azure-pipelines-2.yml  pyproject.toml  requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/pptx_handler/: __init__.py  cli.py  pptx_handler.py
src/pptx_handler/template/: 202x-xx-xx_Datenanalyse_AKL_Kundenname.pptx
tests/: __init__.py  test_pptx_handler.py
