[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pptx_handler"
version = "0.1.0"
description = "A Python PowerPoint generator via a GEBHARDT presentation template"
readme = "README.rst"
authors = [
  {name = "Ramez Soliman", email = "r.soliman@gebhardt-group.com"}
]
maintainers = [
  {name = "Ramez Soliman", email = "r.soliman@gebhardt-group.com"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Haranmes/pptx_handler/issues"
changelog = "https://github.com/Haranmes/pptx_handler/blob/master/changelog.md"
homepage = "https://github.com/Haranmes/pptx_handler"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

